@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6355 2004/06/27 21:41:39 abs Exp $
+$NetBSD: CHANGES,v 1.6356 2004/06/27 22:48:11 abs Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3115,4 +3115,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Removed xml-i18n-tools [jmmv 2004-06-27]
 	Updated uptimec to 0.2p3 [xtraeme 2004-06-27]
 	Added cambevao 2.0 [abs 2004-06-27]
+	Updated pkglint to 3.80 [abs 2004-06-27]
 
